# Formation-Zone01

./: README.md
C/atm-management-system/: .gitignore  Makefile  Readme.md  explication.txt
GraphQL/: README.md
GraphQL/js/: main.js
Javascipt/mini-framework/: README.md  main.js  toDoList.js
Javascipt/real-time-forum/: .gitignore  README.md  go.mod  go.sum  index.html
Next.JS/social-network-next/: README.md  README_FR.md  go.mod  launch.sh
Rust/filler/: .gitignore  README.md
Rust/localhost/: .gitignore  Cargo.toml  README.md  run_cgi_tests.sh  setup_hosts_file.sh
Rust/multiplayer-fps/: .gitignore  Cargo.toml  README.md  deploy.yml  run server.txt
Rust/multiplayer-fps/src/: lib.rs  transport.rs
Rust/multiplayer-fps/src/client/: bevy_client.rs  interaction_server.rs  main.rs
Rust/multiplayer-fps/src/client/bevy_client/: audio.rs  cursor.rs  environment.rs  fps.rs  graphique_quality.rs  map.rs  menu_general.rs  menu_register.rs  moteur.rs  player_manager.rs  player_movement.rs  scene.rs  setup_ennemy.rs  setup_player.rs  struct_manager.rs  struct_menu.rs
Rust/multiplayer-fps/src/client/interaction_server/: config.rs  get_ip.rs  player_network.rs  udpsocket.rs
Rust/multiplayer-fps/src/server/: main.rs  mods.rs
Rust/multiplayer-fps/src/server/mods/: config.rs  udpsocket.rs
Rust/wget/: .gitignore  Cargo.toml  audit.sh  readme.md
Rust/wget/src/: download.rs  main.rs  mirror.rs
git/: Bare.md  Blobs_trees_and_commits.md  Branching.md  Check_it_out.sh  History.sh  Local_and_remote_repositories.md  Merge.md  README.md  Reverting_changes.sh  Tag.sh
(+161 files in other folders)
