[package]
name = "multiplayer_fps"
version = "0.1.0"
edition = "2021"
# Par default le binaire client
default-run = "client" 

[dependencies]
bevy = "0.14.2"
bevy_rapier3d = "0.27.0"
local-ip-address = "0.6.3"
serde = {version = "1.0.210", features = ["derive"]}
bincode = "1.3.3"
serde_derive = "1.0.210"
tokio = { version = "1.40.0", features = ["full"] }
renet = "0.0.16"
bevy_renet = "0.0.12"
rand = "0.8.5"

[features]
transport = []

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"
