[package]
name = "wget"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
clap = { version = "4.5.21", features = ["derive"] }
clap_derive = "4.5.18"
tokio = { version = "1", features = ["full"] }
indicatif = "0.17.9"
chrono = "0.4"
dirs-next = "2.0"
scraper = "0.21.0"
url = "2.2"
regex = "1.9"
